--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "promise-polyfill": "^6.0.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.2",
-    "react-router-dom": "^4.0.0-beta.6",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.2",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "request": "^2.72.0",
     "serve-favicon": "^2.3.0",
     "social-share.js": "^1.0.15",
@@ -32,29 +32,27 @@
     "autoprefixer": "^6.7.2",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import": "^1.1.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2015-webpack": "^6.4.3",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.27.3",
-    "eslint": "^3.15.0",
-    "eslint-loader": "^1.6.1",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
     "gulp": "^3.9.1",
     "node-sass": "^4.5.0",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.1.3",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.3",
-    "serve-favicon": "^2.4.2",
-    "style-loader": "^0.14.1",
-    "uglify-js": "^2.8.12",
-    "uglifyjs-webpack-plugin": "^0.3.0",
-    "webpack": "^2.2.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "uglify-js": "^3.3.16",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
     "webpack-load-plugins": "^0.1.2",
-    "webpack-merge": "^2.6.1",
+    "webpack-merge": "^4.1.2",
     "webpack-sources": "^0.2.0",
     "webpack-validator": "^2.3.0"
   }
