--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prd": "webpack --config webpack/webpack.config.prd.js  --colors --progress"
   },
   "dependencies": {
+    "antd": "^3.3.3",
     "axios": "^0.15.3",
     "compression": "^1.6.2",
     "debug": "~2.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "request": "^2.72.0",
     "serve-favicon": "^2.3.0",
     "social-share.js": "^1.0.15",
