--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios-mock-adapter": "^1.15.0",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.2",
@@ -44,6 +45,7 @@
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "gulp": "^3.9.1",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.5.0",
     "postcss-loader": "^2.1.3",
     "run-sequence": "^1.2.2",
